--- a/v1.0/web/src/components/list/list.scss
+++ b/v1.0/web/src/components/list/list.scss
@@ -1,4 +1,4 @@
-.container header{position:relative;}
+.container header,.container footer{background:#fc5000;color:#fff;}
 // .container header .ci-list{
 //     display:block;
 //      width: 20px;
