--- a/v1.0/web/src/components/list/list.scss
+++ b/v1.0/web/src/components/list/list.scss
@@ -8,6 +8,7 @@
 //     top:30px;
 //     left:40px;
 //    }
+.container .body{overflow:auto;}
 .container .list-ul-c div{padding-left:30px;line-height:100px;}
 .container .list-ul-c span{float:left;}
 .container .list-span{display:block;float:left;}
