--- a/v1.0/web/src/lib/base.css
+++ b/v1.0/web/src/lib/base.css
@@ -4,37 +4,8 @@ body,html{width: 100%;}
 body,dl,dd,h1,h2,h3,h4,h5,h6,p,form{margin:0;}
 ol,ul{margin:0; padding:0;}
 ul,ol,li{list-style:none;}
-img{
-	display:block;
-	border:0 none;}
-input{
-	outline:none;}
-body{
-	font-family:"微软雅黑";
-	height: 100%;
-}
-a{
-	text-decoration:none;
-	display:block;
-}
-/*版心容器的样式*/
-.con{
-    width: 985px;
-	margin:0 auto;
-	height: 100%;
-}
-/*左浮动*/
-.fl{float:left;}
-/*右浮动*/
-.fr{float:right;}
-/* 清除浮动 */
-.clear{
-    display:block;
-    content:"";
-    height: 0;
-    clear:both;
-    overflow:hidden;
-    visibility:hidden;
-    zoom:1;
-}
-
+ul{overflow: hidden;}
+li{float:left;margin:10px;}
+input{outline:none;}
+body{font-family:"微软雅黑";height: 100%;font-size:10px;}
+a{text-decoration:none;display:block;}
