移动端添加

--- a/v1.0/web/src/components/list/list.scss
+++ b/v1.0/web/src/components/list/list.scss
@@ -9,7 +9,7 @@
     top: 117px;
     right: 851px;
    }
-.container .list-ul-c div{padding-left:30px;line-height:100px;}
+.container .list-ul-c div{padding-left:30px;line-height:100px;background-color:#ECF5F0;}
 .container .list-ul-c span{float:left;}
 .container .list-span{display:block;float:left;}
 .container p{color:#ffffff;text-align:center;margin-top:120px;}
