--- a/v1.0/web/src/components/backstage/backstage.scss
+++ b/v1.0/web/src/components/backstage/backstage.scss
@@ -38,28 +38,25 @@ a{
 
 #header{background:url('../../img/h1.jpg') no-repeat ; background-size:100%; 
     h1{color:red; text-align:center;}
-    span{float:right;
+    >span{float:right;
         i{padding:0 20px; cursor:pointer; font-size:none;}
     }
 }
 #main{background-color:#fff; }
-.bill_6{float:left; margin-left:30px; border:2px solid #ccc; margin-top:20px;}
-.bill {
-    h3{text-align:center; width:280px; line-height:40px; position:relative; cursor:pointer;}
-        span{background-color:skyblue; position:absolute; top:0px; right:0px; cursor:pointer; display:none;}
-}
-.bill {
+.bill_6{float:left; margin-left:30px; border:2px solid #ccc; margin-top:20px;
+    img{width:60px; height:60px; float:left;}
     ul{display:none;
-
-        h2{background-color:skyblue; text-align:center; margin:0 auto; cursor:pointer;}
+        li{ margin:10px 0px; border-bottom:5px solid #ffeb3b; padding:10px 5px;}
     }
 }
 .bill {
-    li{ margin:10px 0px; border-bottom:5px solid #ffeb3b; padding:10px 5px;}
+    h3{text-align:center; width:280px; line-height:40px; position:relative; cursor:pointer;}
+        >span{background-color:skyblue; position:absolute; top:0px; right:0px; cursor:pointer; display:none;}
 }
 .bill {
-    img{width:60px; height:60px; float:left;}
+        h2{background-color:skyblue; text-align:center; margin:0 auto; cursor:pointer;}
 }
+
 .menu{padding:0 50px; background:skyblue; float:left; height:600px;
     li{line-height:50px; border-radius:5px 5px; width:100px; text-align:center; 
         p{height:0px; background:skyblue; display:none;
@@ -69,4 +66,6 @@ a{
     }
     .menu_p{background:#fff;}
 }
+
+.form_row{float:left;}
 
