--- a/v1.0/web/src/components/home/home.scss
+++ b/v1.0/web/src/components/home/home.scss
@@ -1,10 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-img{
-    border:0;
-}
+*{margin: 0;padding: 0;}
+img{border:0;}
 ol, ul ,li{list-style: none;} 
 body,html{height:100%;width:100%;}
 #app{height:100%;}
@@ -51,7 +46,7 @@ body,html{height:100%;width:100%;}
 .container .body .ctimg-1{width:100%;}
 .container .body .c-ul1{line-height:100px;}
 .container .body .c-ul1 li:nth-child(1){color:#F76D2F;}
-.container footer{height:150px;border-sizing:border-box;}
+.container footer{height:170px;border-top:1px solid #ccc;}
 .container .body .c-ul1,.container footer .home-c{
     display:flex;
     justify-content: space-around;
