--- a/v1.0/web/src/components/datagrid/datagird.scss
+++ b/v1.0/web/src/components/datagrid/datagird.scss
@@ -1,7 +1,7 @@
 #datagrid p{color:#000;margin:0;}
 .name-c{font-size:45px;}
 .foodlist-c li{position:relative;}
-.foodlist-c img{width:250px;}
+.foodlist-c img{width:250px;margin-left:10px;}
 .tianjia-c{width: 80px;height: 80px;background-image: url("../../img/1.png");background-size:1500px;position:absolute;background-position:1504px 212px;bottom: -15px;right: 70px;}
 .jiage-c{position:absolute;right:40px;color:#F76D2F;}
 .fl-toolbar{ background: #fff;text-align:right;}
