--- a/v1.0/web/src/components/datagrid/datagird.scss
+++ b/v1.0/web/src/components/datagrid/datagird.scss
@@ -1,9 +1,12 @@
 #datagrid p{color:#000;margin:0;}
-.name-c{font-size:45px;}
-.foodlist-c li{position:relative;}
-.foodlist-c img{width:250px;margin-left:10px;}
-.tianjia-c{width: 80px;height: 80px;background-image: url("../../img/1.png");background-size:1500px;position:absolute;background-position:1504px 212px;bottom: -15px;right: 70px;}
-.jiage-c{position:absolute;right:40px;color:#F76D2F;}
+.name-c{font-size:28px;font-weight:bold;}
+.foodlist-c li{
+    position:relative;width:296px;height: 370px;padding:0 10px;
+    span{font-size:25px;}
+}
+.foodlist-c img{width:250px;height: 250px;}
+.tianjia-c{width: 45px;height: 68px;background-image: url("../../img/1.png");background-size:1500px;position:absolute;background-position:1500px 212px;bottom: 6px;right: 37px;}
+.jiage-c{color:#F76D2F;font-weight:bold;}
 .fl-toolbar{ background: #fff;text-align:right;}
 .btn-goback{background-color: #e6674a;border-color: #e6674a}
 .form-horizontal{margin-top:10px;}
