--- a/v1.0/web/src/components/home/home.scss
+++ b/v1.0/web/src/components/home/home.scss
@@ -41,7 +41,7 @@
 }
 .container .body .ctimg-1{width:100%;}
 .container .body .c-ul1{line-height:100px;}
-.container .body .c-ul1 li:first-child,.container footer .home-c li:first-child{color:#F76D2F;}
+.active{color:#F76D2F;}
 .container footer{height:170px;border-top:1px solid #ccc;}
 .container .body .c-ul1,.container footer .home-c{
     display:flex;
@@ -70,7 +70,7 @@
     background-image: url("../../img/1.png");
     background-size:1300px;
     margin:0 auto;
-    background-position:1032px -333px;
+    background-position:1036px -330px;
     
 }
 .container .ci-6{
@@ -79,7 +79,7 @@
     background-image: url("../../img/1.png");
     background-size:1300px;
     margin:0 auto;
-    background-position:1870px -512px;
+    background-position:1869px -506px;
 }
 .container .ci-7{
      width: 44px;
