--- a/v1.0/web/src/components/list/list.scss
+++ b/v1.0/web/src/components/list/list.scss
@@ -1,6 +1,6 @@
 .container header{position:relative;}
 .container header .list-qian{
-     width: 80px;
+    width: 80px;
     height: 80px;
     background-image: url("../../img/2.png");
     background-size:1500px;
@@ -13,6 +13,11 @@
 .container .list-span{display:block;float:left;}
 .container p{color:#ffffff;text-align:center;margin-top:120px;}
 .container .list-ul li{margin-top:0px;float:left}
-.h1-1{text-align:center;line-height:80px;}
+.h1-1{text-align:center;line-height:80px;font-weight:600;font-size:40px;}
 .container .list-ul span{display:block;float:left;width:200px;height:100px;background:#FC673C;color:#ffffff;line-height:100px;}
 .container .list-ul span{display:block;float:left;width:200px;height:100px;background:#FC673C;color:#ffffff;line-height:100px;}
+.container .fl_footer{
+    height:260px;
+    .ci-4{background-image: url("../../img/1.png");background-color:#fff;}
+    .ci-5{background-image: url("../../img/2.png");background-color:#F76D2F;}
+}
