--- a/v1.0/web/src/components/backstage/backstage.scss
+++ b/v1.0/web/src/components/backstage/backstage.scss
@@ -7,13 +7,15 @@
 #main{background-color:#fff; }
 .bill_6{float:left; margin-left:30px; border:2px solid #ccc; margin-top:20px;
     img{width:60px; height:60px; float:left;}
-    ul{display:none;
-        li{ margin:10px 0px; border-bottom:5px solid #ffeb3b; padding:10px 5px;}
+    >ul{display:none;
+        >li{ margin:10px 0px; border-bottom:5px solid #ffeb3b; padding:10px 5px; float:none;}
     }
 }
-.bill {
-    h3{text-align:center; width:280px; line-height:40px; position:relative; cursor:pointer;}
+.bill_6{
+    >h3{text-align:center; width:280px; line-height:40px; position:relative; cursor:pointer;
+
         >span{background-color:skyblue; position:absolute; top:0px; right:0px; cursor:pointer; display:none;}
+    }
 }
 .bill {
         h2{background-color:skyblue; text-align:center; margin:0 auto; cursor:pointer;}
@@ -29,4 +31,14 @@
     .menu_p{background:#fff;}
 }
 
-.form_row{float:left;}
+
+.form_row{float:left; width:70%;}
+.row{padding-top:30px; width:100%;
+    .col-xs-2 {width:60%;}
+    >div{
+        >span{display:inline-block; font-size:20px;padding:0 20px 0 40px;}
+        >input{display:inline-block; width:50%; }
+        >select{display:inline-block; width:50%;}
+        >i{color:red;}
+    }
+}
