--- a/v1.0/web/src/components/backstage/backstage_Adm.scss
+++ b/v1.0/web/src/components/backstage/backstage_Adm.scss
@@ -5,11 +5,13 @@
         }
         tbody{
             tr{
-                td{padding:0 10px; text-align:center; padding-top:30px;}
+                td{padding:10px 10px; text-align:center; vertical-align:middle;
+                    >button{margin-bottom:10px;}
+                }
             }
         }
     }
     img{width:100px; height:100px;}
 }
-.row{padding-top:30px;}
+.row{padding-top:30px; width:100%;}
 .btn_ton{text-align:center; padding:50px 0px;}
