--- a/v1.0/web/src/components/home/home.scss
+++ b/v1.0/web/src/components/home/home.scss
@@ -89,6 +89,5 @@
     margin:0 auto;
     background-position:-463px -3px;  
 }
-// .fixed{position:fixed;top:0;left:0;right:0;}
-// .c-ul1{background:#fc5000;color:#fff;}
+.fixed{position:fixed;top:190px;left:0;z-index:999;background: #fff;width:100%;}
 .fl-toolbar{width: 100%;height: 50px;padding: 10px 20px;border-bottom: solid 1px #ccc;}
