--- a/v1.0/web/src/components/home/home.scss
+++ b/v1.0/web/src/components/home/home.scss
@@ -11,6 +11,7 @@ body,html{height:100%;width:100%;}
 .container{font-size:40px;}
 .container{height:100%;display:flex;flex-direction:column;width:100%;}
 .container header{width:100%;height:200px;background-color:#F76D2F;border-sizing:border-box;color:#ffffff;}
+.container header input{width:300px;color:#000000;}
 .container .body{flex:1;width:100%; overflow-y:auto;}
 .container .ci-1{
     width: 60px;
@@ -23,7 +24,7 @@ body,html{height:100%;width:100%;}
     right: 136px;
 }
 .container .ctime{position:absolute;right:20px;}
-.container div:nth-child(1){height:100px;}
+.container .home-div{height:100px;}
 .container header ul{
     display:flex;
    justify-content: space-around;
@@ -46,7 +47,8 @@ body,html{height:100%;width:100%;}
     background-image: url("../../img/2.png");
     position:absolute;
     background-position:-1422px 0px;
-    top:1px;
+    top:6px;
+    right:20px;
 }
 .container .body .ctimg-1{width:100%;}
 .container .body .c-ul1{line-height:100px;}
@@ -56,6 +58,7 @@ body,html{height:100%;width:100%;}
     display:flex;
     justify-content: space-around;
     height:150px;
+   
    
 }
 .container footer ul li{
@@ -103,3 +106,4 @@ body,html{height:100%;width:100%;}
 // .fixed{position:fixed;top:0;left:0;right:0;}
 // .c-ul1{background:#fc5000;color:#fff;}
 .fl-toolbar{width: 100%;height: 50px;padding: 10px 20px;border-bottom: solid 1px #ccc;}
+
