--- a/v1.0/web/src/assets/base.css
+++ b/v1.0/web/src/assets/base.css
@@ -6,9 +6,6 @@ ul,ol,li{list-style:none;}
 ul{overflow: hidden;}
 img{display:block;border:0 none;}
 li{float:left;margin:10px;}
-input{outline:none;}
+input{outline:none;border:0 none;}
 body{font-family:"微软雅黑";height: 100%;font-size:10px;}
-
 a{text-decoration:none;display:block;}
-
-
