--- a/v1.0/web/src/components/carlist/carlist.scss
+++ b/v1.0/web/src/components/carlist/carlist.scss
@@ -6,7 +6,6 @@
 .carlist-div2{padding-top:60px;}
 .carlist-div2 .cc-span{position:absolute ;right:150px;bottom:88px;font-weight:400;}
 .carlist-money{color:#F2753D;margin-left:20px;}
-
 .carlist-i1{
     width: 80px;
     height: 80px;
@@ -17,7 +16,6 @@
     bottom:69px;
     right: 167px;
 }
-
 .carlist-i2{
     width: 80px;
     height: 80px;
@@ -55,9 +53,8 @@
 .container p{color:#ffffff;text-align:center;margin-top:120px;}
 .container .list-ul{display:flex;}
 .container .list-ul li{margin-top:0px;float:left;flex:1;background:#FC673C;color:#fff;height:100px;line-height:100px;}
-.container .fl_footer{
+.container .car_footer{
     height:260px;
     .ci-4{background-image: url("../../img/1.png");background-color:#fff;}
     .ci-5{background-image: url("../../img/2.png");background-color:#F76D2F;}
 }
-
