--- a/v1.0/web/src/components/my/my.scss
+++ b/v1.0/web/src/components/my/my.scss
@@ -1,1 +1,6 @@
-.container .c-my{}
+.container .my_footer{
+    .ci-4{background-image: url("../../img/1.png");background-color:#fff;}
+    .ci-5{background-image: url("../../img/1.png");background-color:#fff;}
+    .ci-6{background-image: url("../../img/1.png");background-color:#fff;}
+    .ci-7{background-image: url("../../img/2.png");background-color:#F76D2F;}
+}
