--- a/v1.0/web/src/components/carlist/carlist.scss
+++ b/v1.0/web/src/components/carlist/carlist.scss
@@ -51,8 +51,10 @@
 .container .body{overflow:auto;}
 .container .list-span{display:block;float:left;}
 .container p{color:#ffffff;text-align:center;margin-top:120px;}
-.container .list-ul{display:flex;}
-.container .list-ul li{margin-top:0px;float:left;flex:1;background:#FC673C;color:#fff;height:100px;line-height:100px;}
+.container .list-ul li{
+    margin-top:0px;float:left;width:296px;background:#FC673C;color:#fff;height:100px;line-height:100px;
+    &:last-child{float:right;}
+}
 .container .car_footer{
     height:260px;
     .ci-4{background-image: url("../../img/1.png");background-color:#fff;}
