--- a/v1.0/web/src/components/list/list.scss
+++ b/v1.0/web/src/components/list/list.scss
@@ -8,3 +8,6 @@
     .carlist-money{margin:0;}
     .carlist-div1{padding-top: 0;}
 }
+.container .list-hao{width:500px;border:1px solid #000;}
+.container .list-button{width:100%;}
+.container .dingdan{text-align:center;}
