--- a/v1.0/web/src/components/my/my.scss
+++ b/v1.0/web/src/components/my/my.scss
@@ -1,12 +1,3 @@
-.container .ci-7{
-    width: 44px;
-    height: 44px;
-    background-image: url("../../img/2.png");
-    background-size:1300px;
-    margin:0 auto;
-    background-position:-463px -3px;  
-    background-color:#fc5000;
-}
 .container .pinglun-ul span{display:block;}
 .container .pinglun-ul .pinglun-li{width:100%;position:relative;padding:40px 0;}
 .container .pinglun-ul .pinglun-span1{padding:10px;}
@@ -18,16 +9,19 @@
 
 .container .my-textarea{margin-top:30px;border:1px solid #000;width:100%;height:300px;}
 .container .ai{
-    width: 60px;
-    height: 60px;
-    background-image: url("../../img/1.png");
+    width: 49px;
+    height: 31px;
+    background-image: url("../../img/2.png");
+    background-color:#F76D2F;
     background-size:1300px;
     position:absolute;
-    background-position:109px 303px;
-    bottom: 28px;
+    background-position:-260px 437px;
+    bottom: 54px;
     right: 90px;
 }
-
+.container .love-ul img{width:200px;height:200px;float:left;margin-right:60px;}
+.container .love-ul li{width:100%;}
+.container .love-ul span{display:block;}
 .container .my_footer{
     .ci-4{background-image: url("../../img/1.png");background-color:#fff;}
     .ci-5{background-image: url("../../img/1.png");background-color:#fff;}
