--- a/v1.0/web/src/components/backstage/backstage.scss
+++ b/v1.0/web/src/components/backstage/backstage.scss
@@ -5,10 +5,10 @@
         i{padding:0 20px; cursor:pointer; font-size:none;}
     }
 }
-#main{width:100%;height:600px;}
+#main{width:100%;height:600px;border-bottom:2px solid #ccc;}
 .bill_6{
     float:left; margin-left:30px; border:2px solid #ccc; margin-top:20px;
-    img{width:60px; height:60px; float:left;margin-right:10px;}
+    img{width:60px; height:60px; float:left;margin-right:10px;border-radius:10px;}
     >ul{display:none;
         >li{ margin:10px 0px; border-top:5px solid #ffeb3b; padding:10px 5px; float:none;
             >span{
@@ -21,11 +21,12 @@
     }
 }
 .bill{
-    overflow-y:auto;height:600px;padding-left:90px;
+    overflow-y:auto;height:600px;
     h2{background-color:skyblue; text-align:center; margin:0 auto; cursor:pointer;font-size:20px;}
 }
 .menu{padding:0 50px; background:#000; float:left; height:600px;opacity:0.8;
     li{line-height:50px; border-radius:5px 5px; width:100px; text-align:center; float:none;background:orange;
+        &:first-child{background:#fff;}
         >a{border-radius:5px 5px; color:#000;}
         p{height:0px; background:skyblue; display:none;
             &:hover{background:#fff; border-radius:5px 5px;}
@@ -46,9 +47,9 @@
         }
     }
 }
-.Adm{float:left;
+.Adm{float:left;width:100%;
     table{ 
-        th{padding:0 10px;height:40px;font-size:20px;text-align:center;}
+        th{padding:0 10px;height:40px;font-size:20px;text-align:center;background:#727d8a;color:#fff;}
         tbody{
             tr{
                 td{padding:10px 10px; text-align:center; vertical-align:middle;
@@ -60,3 +61,4 @@
     img{width:100px; height:100px;}
 }
 .btn-del{margin-right:20px;}
+.fl_first{background: #fc5000;}
