--- a/v1.0/web/src/components/carlist/carlist.scss
+++ b/v1.0/web/src/components/carlist/carlist.scss
@@ -1,6 +1,6 @@
 .carlist-ul li{float:none;overflow:hidden;position:relative;margin-bottom:10px;}
 .carlist-ul  div{padding-left:20px;}
-.img-carlist{float:left;width:300px;height:300px;}
+.img-carlist{float:left;width:300px;height:300px;border-radius:20px;}
 .carlist-ul div{overflow:hidden;}
 .carlist-div1{padding-top:40px;font-weight:600;}
 .carlist-div2{padding-top:60px;}
