--- a/v1.0/web/src/components/backstage/backstage.scss
+++ b/v1.0/web/src/components/backstage/backstage.scss
@@ -9,7 +9,7 @@
 .bill_6{
     float:left; margin-left:30px; border:2px solid #ccc; margin-top:20px;
     img{width:60px; height:60px; float:left;margin-right:10px;border-radius:10px;}
-    >ul{display:none;
+    >ul{
         >li{ margin:10px 0px; border-top:5px solid #ffeb3b; padding:10px 5px; float:none;
             >span{
                 >span{padding:0 10px;}
@@ -61,7 +61,14 @@
     img{width:100px; height:100px;}
 }
 .fl_search{text-align:right;
-    input{border:1px solid #ccc;margin-top:20px;margin-right:10px;border-radius:10px;
-        &:first-child{width:200px;}
+    input{border:1px solid #ccc;margin-top:20px;margin-right:10px;border-radius:10px;width:200px;height:32px;
     }
+    button{border-radius:10px;margin-right:20px;}
+}
+.modal-lg{
+    background:#fff;
+    .modal-body{
+        img{float:left;margin-right:30px;}
+        p{line-height:30px;}
+    }       
 }
