--- a/v1.0/web/src/components/my/my.scss
+++ b/v1.0/web/src/components/my/my.scss
@@ -19,7 +19,7 @@
     right: 90px;
 }
 .container .love-ul img{width:200px;height:200px;float:left;margin-right:60px;}
-.container .love-ul li{width:100%;}
+.container .love-ul li{width:100%;height:220px;}
 .container .love-ul span{display:block;}
 .container .my_footer{
     .ci-4{background-image: url("../../img/1.png");background-color:#fff;}
