--- a/v1.0/web/src/components/my/my.scss
+++ b/v1.0/web/src/components/my/my.scss
@@ -8,15 +8,19 @@
 .container .my-ul h1{height:100px;line-height:100px;}
 .container .my-textarea{margin-top:30px;border:1px solid #000;width:100%;height:300px;}
 .container .ai{
-    width: 60px;
-    height: 60px;
-    background-image: url("../../img/1.png");
+    width: 49px;
+    height: 31px;
+    background-image: url("../../img/2.png");
+    background-color:#F76D2F;
     background-size:1300px;
     position:absolute;
-    background-position:109px 303px;
-    bottom: 28px;
+    background-position:-260px 437px;
+    bottom: 54px;
     right: 90px;
 }
+.container .love-ul img{width:200px;height:200px;float:left;margin-right:60px;}
+.container .love-ul li{width:100%;}
+.container .love-ul span{display:block;}
 .container .my_footer{
     .ci-4{background-image: url("../../img/1.png");background-color:#fff;}
     .ci-5{background-image: url("../../img/1.png");background-color:#fff;}
